# Tally

./: .env.example  .gitignore  AI_PIPELINE.md  API.md  API_INTELLIGENCE.md  AUTHENTICATION.md  BLUEPRINT.md  CONTRIBUTING.md  DATABASE.md  DEVELOPMENT_PLAN.md  HOW_TO_RUN_PHASE4.txt  IMPORT_PIPELINE.md  PHASE4_COMPLETION_REPORT.md  PHASE4_IMPLEMENTATION.md  PHASE5_RELEASE_REPORT.md  PRIVACY.md  PRODUCT.md  README.md  README_PHASE4.md  RELEASE_CHECKLIST.md  SECURITY.md  SESSION_SUMMARY.md  SYSTEM_ARCHITECTURE.md  UI_DESIGN.md  USER_FLOWS.md  pyproject.toml  pytest.ini
backend/: __init__.py
backend/app/: __init__.py
backend/app/features/: __init__.py
backend/app/features/imports/: __init__.py  bank_detector.py  duplicates.py  errors.py  file_manager.py  logging.py  merchant_resolver.py  models.py  normalizer.py  parsers.py  privacy.py  repository.py  service.py  validator.py
backend/app/features/intelligence/: EXAMPLE.py  __init__.py  cache.py  categorization_service.py  confidence_engine.py  context_builder.py  event_logging.py  insights_engine.py  merchant_memory.py  models.py  providers.py  repositories.py  rule_engine.py
backend/app/features/transactions/: __init__.py  logging.py  models.py  repository.py  services.py
backend/tests/features/imports/: __init__.py  test_import_engine.py  test_import_performance.py  test_normalizer.py  test_privacy_engine.py  (+2 more)
mobile/: pubspec.yaml
mobile/ios/Runner/: Info.plist
mobile/lib/: main.dart
mobile/lib/routing/: app_router.dart  routes.dart
mobile/lib/theme/: app_colors.dart  app_theme.dart  theme_provider.dart
(+41 files in other folders)
